objects/vlocity_cmt__OrderAsyncOperationEvent__e.object
<CustomObject>
    <description>Requests an asynchronous operation to run on the requested order, optionally on a specific order item bundle.</description>
    <fields>
        <fullName>vlocity_cmt__AsyncOperationData__c</fullName>
        <description>Additional data that is useful or necessary to the requested asynchronous operation.</description>
        <label>Async Operation Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AsyncOperation__c</fullName>
        <description>The type of asynchronous operation requested.</description>
        <label>Async Operation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderId__c</fullName>
        <description>Id of the order on which the asynchronous operation needs to occur (required).</description>
        <label>Order</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderItemId__c</fullName>
        <description>Id of the order item on which the asynchronous operation needs to occur (when relevant).</description>
        <label>Order Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Order Asynchronous Operation Event</label>
    <pluralLabel>Order Asynchronous Operation Events</pluralLabel>
</CustomObject>